[package]
name = "gmt-analytics"
version = "0.1.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.26.2"
skyangle = {path="../skyangle"}
triangle-rs = {path="../triangle-rs"}
zernike = {path="../zernike"}
complot = {path="../complot"}
