[package]
name = "gmt-analytics"
version = "0.1.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.26.2"
skyangle = { git = "https://github.com/rconan/skyangle.git", branch = "main"}
triangle-rs = { git = "https://github.com/rconan/triangle-rs.git", branch = "main"}
zernike = { git = "https://github.com/rconan/zernike.git", branch = "main"}
complot = { git = "https://github.com/rconan/complot.git", branch = "main"}
